--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.5.2",
     "flag-icons": "^7.5.0",
+    "framer-motion": "^12.23.25",
+    "i18next": "^25.7.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.10.0"
+    "react-i18next": "^16.3.5",
+    "react-router-dom": "^7.10.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
