--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/hooks": "^8.3.9",
     "@mantine/modals": "^8.3.9",
     "@mantine/nprogress": "^8.3.9",
+    "@pbe/react-yandex-maps": "^1.2.5",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-query-devtools": "^5.91.1",
