--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "flag-icons": "^7.5.0",
     "framer-motion": "^12.23.25",
     "i18next": "^25.7.1",
+    "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.3.5",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.10.0",
     "zustand": "^5.0.9"
   },
